--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -93,4 +93,8 @@
             app:iconSize="50dp" />
 
     </LinearLayout>
+
+    <include
+        android:id="@+id/include"
+        layout="@layout/footer" />
 </androidx.constraintlayout.widget.ConstraintLayout>
