--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -4,22 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#4FC3F7"
-    tools:context=".PanduanActivity">
+    tools:context=".SettingActivity">
 
     <include
-        android:id="@+id/backToolbar"
-        layout="@layout/activity_back_toolbar" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="70dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-    </LinearLayout>
+        android:id="@+id/include"
+        layout="@layout/activity_main_toolbar" />
 
     <include
         android:id="@+id/include"
