--- a/app/src/main/res/layout/activity_koleksi.xml
+++ b/app/src/main/res/layout/activity_koleksi.xml
@@ -7,7 +7,7 @@
     tools:context=".KoleksiActivity">
 
     <include
-        android:id="@+id/include"
+        android:id="@+id/includeKoleksi1"
         layout="@layout/activity_main_toolbar" />
 
     <LinearLayout
@@ -17,6 +17,14 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/titlePage"
@@ -38,6 +46,6 @@
     </LinearLayout>
 
     <include
-        android:id="@+id/include"
+        android:id="@+id/includeKoleksi2"
         layout="@layout/footer" />
 </androidx.constraintlayout.widget.ConstraintLayout>
