--- a/app/src/main/res/layout/activity_penjelajah.xml
+++ b/app/src/main/res/layout/activity_penjelajah.xml
@@ -6,42 +6,46 @@
     android:layout_height="match_parent"
     tools:context=".PenjelajahActivity">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="-16dp"
-        tools:layout_editor_absoluteY="25dp">
-
-        <EditText
-            android:id="@+id/penjelajahSearchField"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="16dp"
-            android:background="@drawable/bg_ltk_search"
-            android:drawableRight="@drawable/ic_ltk_document_1"
-            android:drawablePadding="5dp"
-            android:hint="Cari buku"
-            android:includeFontPadding="false"
-            android:paddingLeft="16dp"
-            android:paddingTop="10dp"
-            android:paddingRight="10dp"
-            android:paddingBottom="10dp"
-            android:inputType="text"
-            android:maxLines="1"
-            android:textColor="@color/primary1"
-            android:textColorHint="@color/primary1"
-            android:textSize="20sp" />
+        android:layout_height="match_parent">
 
         <WebView
             android:id="@+id/elWebView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="fill_parent"
             android:layout_marginLeft="16dp"
+            android:layout_marginTop="-128dp"
             android:layout_marginRight="16dp" />
-    </LinearLayout>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/penjelajahSearchField"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/bg_ltk_search"
+                android:drawableRight="@drawable/ic_ltk_document_1"
+                android:drawablePadding="5dp"
+                android:hint="Cari buku"
+                android:includeFontPadding="false"
+                android:inputType="text"
+                android:maxLines="1"
+                android:paddingLeft="16dp"
+                android:paddingTop="10dp"
+                android:paddingRight="10dp"
+                android:paddingBottom="10dp"
+                android:textColor="@color/primary1"
+                android:textColorHint="@color/primary1"
+                android:textSize="20sp" />
+        </androidx.cardview.widget.CardView>
+
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
