--- a/app/src/main/res/layout/activity_riwayat.xml
+++ b/app/src/main/res/layout/activity_riwayat.xml
@@ -7,7 +7,7 @@
     tools:context=".RiwayatActivity">
 
     <include
-        android:id="@+id/include"
+        android:id="@+id/includeRiwayat1"
         layout="@layout/activity_main_toolbar" />
 
     <LinearLayout
@@ -38,6 +38,6 @@
     </LinearLayout>
 
     <include
-        android:id="@+id/include"
+        android:id="@+id/includeRiwayat2"
         layout="@layout/footer" />
 </androidx.constraintlayout.widget.ConstraintLayout>
