resolve indexing penjelajah + add CSE

--- a/app/src/main/res/layout/activity_koleksi.xml
+++ b/app/src/main/res/layout/activity_koleksi.xml
@@ -42,7 +42,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvKoleksi"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_marginBottom="36dp" />
     </LinearLayout>
 
     <include
