--- a/app/src/main/res/layout/bantuan_home.xml
+++ b/app/src/main/res/layout/bantuan_home.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/layoutDialog"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -39,7 +40,7 @@
                 android:layout_marginBottom="8dp"
                 android:fontFamily="@font/poppins_semibold"
                 android:includeFontPadding="false"
-                android:text="@string/bantuan"
+                android:text="@string/bantuanHome0"
                 android:textColor="@color/text_black"
                 android:textSize="16sp" />
 
@@ -185,6 +186,33 @@
                             android:fontFamily="@font/poppins_semibold"
                             android:includeFontPadding="false"
                             android:text="@string/bantuanHome5"
+                            android:textColor="@color/text_black"
+                            android:textSize="16sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="4dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/number6"
+                            android:layout_width="50dp"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/poppins_semibold"
+                            android:includeFontPadding="false"
+                            android:text="05. "
+                            android:textColor="@color/text_black"
+                            android:textSize="16sp" />
+
+                        <TextView
+                            android:id="@+id/textBantuanHome6"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/poppins_semibold"
+                            android:includeFontPadding="false"
+                            android:text="@string/bantuanHome6"
                             android:textColor="@color/text_black"
                             android:textSize="16sp" />
                     </LinearLayout>
