--- a/app/src/main/res/layout/activity_buku.xml
+++ b/app/src/main/res/layout/activity_buku.xml
@@ -22,7 +22,20 @@
             android:id="@+id/pdfView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#525658" />
+            android:background="#525658" >
+
+            <RelativeLayout
+                android:id="@+id/dummyScreen"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#00FFFFFF"
+                android:clickable="true"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                tools:ignore="SpeakableTextPresentCheck">
+
+            </RelativeLayout>
+        </com.github.barteksc.pdfviewer.PDFView>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -85,4 +98,5 @@
     <include
         android:id="@+id/include"
         layout="@layout/footer" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
