--- a/app/src/main/res/layout/bantuan_home.xml
+++ b/app/src/main/res/layout/bantuan_home.xml
@@ -202,7 +202,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/poppins_semibold"
                             android:includeFontPadding="false"
-                            android:text="05. "
+                            android:text="06. "
                             android:textColor="@color/text_black"
                             android:textSize="16sp" />
 
@@ -213,6 +213,33 @@
                             android:fontFamily="@font/poppins_semibold"
                             android:includeFontPadding="false"
                             android:text="@string/bantuanHome6"
+                            android:textColor="@color/text_black"
+                            android:textSize="16sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="4dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/number7"
+                            android:layout_width="50dp"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/poppins_semibold"
+                            android:includeFontPadding="false"
+                            android:text="07. "
+                            android:textColor="@color/text_black"
+                            android:textSize="16sp" />
+
+                        <TextView
+                            android:id="@+id/textBantuanHome7"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/poppins_semibold"
+                            android:includeFontPadding="false"
+                            android:text="@string/bantuanHome7"
                             android:textColor="@color/text_black"
                             android:textSize="16sp" />
                     </LinearLayout>
