--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -15,4 +15,10 @@
         <item>1.35F</item>
         <item>1.7F</item>
     </string-array>
+
+    <string-array name="open_app_set">
+        <item>main</item>
+        <item>home</item>
+        <item></item>
+    </string-array>
 </resources>
