change history log file to server API

--- a/app/src/main/res/layout/activity_riwayat.xml
+++ b/app/src/main/res/layout/activity_riwayat.xml
@@ -31,10 +31,20 @@
             android:textColor="@color/primary1"
             android:textSize="24sp" />
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center"
+            android:visibility="gone" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvRiwayat"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_marginBottom="36dp"
+            android:scrollingCache="false" />
     </LinearLayout>
 
     <include
