resolve and fixing assistant support

--- a/app/src/main/res/xml-v25/shortcuts.xml
+++ b/app/src/main/res/xml-v25/shortcuts.xml
@@ -14,7 +14,7 @@
     </capability>
 
     <shortcut
-        android:shortcutId="MAIN"
+        android:shortcutId="YA"
         android:shortcutShortLabel="@string/shortcut_short_insert_label">
         <capability-binding android:key="actions.intent.OPEN_APP_FEATURE">
             <parameter-binding
