--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -17,8 +17,10 @@
     </string-array>
 
     <string-array name="open_app_set">
-        <item>main</item>
-        <item>home</item>
-        <item></item>
+        <item>yes</item>
+        <item>ya</item>
+        <item>okay</item>
+        <item>oke</item>
+        <item>tolong</item>
     </string-array>
 </resources>
